# dprint-plugin-html

./: Cargo.toml  README.md
src/: configuration.rs  lib.rs  plugin.rs
