[package]
name = "dprint-plugin-html"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[patch.crates-io]
hast = { git = "https://github.com/malobre/hast" }

[dependencies]
anyhow = "1.0.52"
dprint-core = { version = "0.49", features = ["wasm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hast = "0.1"
